# simple-eq

./: Cargo.toml  license.md  readme.md
benches/: realtime.rs
src/: design.rs  filter.rs  kernel.rs  lib.rs  math.rs  parameters.rs  state.rs
