[package]
name = "simple-eq"
description = "A simple audio equalizer"
version = "0.1.0"
authors = ["m-hilgendorf <mike@hilgendorf.audio>"]
edition = "2018"
license = "MIT" 

[features]
no-std = []

[dependencies]
nalgebra = "0.20.0"

[dev-dependencies]
criterion = "0.3.1"
rand = "0.7.3"

[[bench]]
name = "realtime"
harness = false

[profile.release]
debug = true