[package]
name = "simple-eq"
description = "A simple audio equalizer"
version = "0.1.0"
authors = ["Mike Hildendorf <mike@hilgendorf.audio>"]
edition = "2018"
license = "MIT" 

[features]
no_std = []

[dependencies]
nalgebra = "0.32"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "realtime"
harness = false

[profile.release]
debug = true
