[package]
name = "simple-eq"
description = "A simple audio equalizer"
version = "0.2.0"
authors = ["Mike Hildendorf <mike@hilgendorf.audio>"]
edition = "2024"
license = "MIT"

[features]
std = []
default = ["std", "glam"]

[dependencies]
nalgebra = { version = "0.32", optional = true }
glam = { version = "0.30", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "realtime"
harness = false

[profile.release]
debug = true
